# zkmc

./: .gitignore  README.md
encoder/: LANGUAGE.md  README.md  example.gc  example_with_ranking.gc  exp_backoff.gc  exp_backoff_guard_opt.gc  exp_backoff_simple.gc  exp_backoff_state_opt.gc  exp_backoff_state_opt_small.gc  parse_benchmarks.py  pyproject.toml  round-robin.gc
encoder/benchmarks/: README.md  __init__.py  benchmark_config.py  benchmark_zkexplicit.py  benchmark_zkverify.py  conftest.py
encoder/benchmarks/programs/: README.md
encoder/examples/: README.md  counter_simple.gc  dhcp.gc  example.gc  generate_round_robin.py
encoder/src/zkterm_tool/: __init__.py  ast_types.py  automaton_encoder.py  automaton_types.py  cli.py  encoder.py  explicit_cli.py  farkas.py  farkas_cli.py  grammar.lark  parser.py  ranking_cli.py  ranking_encoder.py  ranking_evaluator.py  ranking_types.py  ranking_validator.py  state_enumerator.py  verification_types.py  verifier.py  verify_cli.py  violation_checker.py  z3_solver.py
encoder/tests/: test_encoder.py  test_explicit_integration.py  test_farkas.py  test_farkas_cli.py  test_parser.py  test_ranking_encoder.py  test_ranking_evaluator.py  test_ranking_validator.py  test_state_enumerator.py  test_verification_integration.py  test_verifier.py  test_violation_checker.py  test_z3_solver.py
zkmc-explicit/: Cargo.toml  README.md  rust-toolchain.toml
zkmc-explicit/benches/: benchmark_full_parallel.rs
zkmc-explicit/input/: dhcp_i1a2.json  dhcp_i2a2.json  dhcp_i4a2.json  rr_2.json  rr_3.json
zkmc-explicit/src/: interpolation.rs  lib.rs  zkp.rs
zkmc-symbolic/: Cargo.toml  README.md
zkmc-symbolic/benches/: benchmark_full_parallel.rs
zkmc-symbolic/data/private/: README.md
zkmc-symbolic/input/: dhcp_noOFF_7_2_7.json  exb_i4a2.json  rr_2.json  test.json
zkmc-symbolic/output/: README.md
zkmc-symbolic/src/: lib.rs  main.rs  range_proof.rs  utils.rs  zkmmeq.rs  zkp.rs  zkrp.rs
