[project]
name = "zkterm-tool"
version = "0.1.0"
description = "Transform guarded commands into matrix/vector inequality form"
readme = "README.md"
authors = [
    { name = "Pascal Berrang", email = "git@p4l.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "lark>=1.2.0",
    "numpy>=2.0.0",
]

[project.scripts]
zkterm = "zkterm_tool.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "lark>=1.3.1",
    "numpy>=2.4.1",
    "pytest>=9.0.2",
]
