[package]
name = "zkmc-explicit"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-poly-commit = "0.5.0"
ark-std = "0.5.0"
rand = {version = "0.8.5", features = ["std", "std_rng"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.12"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "benchmark_full_parallel"
harness = false
